--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,6 +12,10 @@ body {
     font-style: oblique;
 }
 
+#p3 {
+    border-bottom: 4px dotted blue;
+}
+
 img {
     width: 50px;
     height: 50px;
