--- a/test.css
+++ b/test.css
@@ -1,6 +1,5 @@
 body {
     background-image: url('dark_wood.png');
-
 }
 
 a{
@@ -10,10 +9,9 @@ a{
 }
 
 p {
-    font-family: "Arial";
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
     font-weight: bold;
-
 }
 
 h3 {
@@ -21,7 +19,6 @@ h3 {
     font-size: 40px;
     font-family: "Passion One";
     margin-bottom: 0px;
-
 }
 
 div{
@@ -33,14 +30,12 @@ li {
 }
 
 #Header {
+    border: solid 8px black;
     width: 500px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10px;
     text-align: center;
-    border: solid 8px black;
-
-
 }
 
 #Header h1 {
@@ -48,7 +43,6 @@ li {
     font-family: "Passion One";
     color: #FFBC00;
     font-weight: bold;
-
 }
 
 #LeftNav {
@@ -57,9 +51,17 @@ li {
     float: left;
     text-align: center;
     padding-bottom: 8px;
+}
 
-    
-    
+#LeftNac img {
+
+}
+
+#LeftNav ul {
+
+}
+
+#LeftNav h3 {
 
 }
 
@@ -71,15 +73,12 @@ li {
     margin-bottom: 10px; 
     text-align: center;   
     padding: 15px;
-
 }
 
 #Footer {
     border: solid 8px black;
-    text-align: center;
-    
+    text-align: center;  
 }
-
 ul{
     list-style-type: none;
     padding-left: 0px;
